--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
             <input id="uname" type="text" name="username" autofocus/><br/>
             </div>
             <div>
-            <label>Passord:</label>
+            <label>Password:</label>
             <input type="password" name="password"/>
             </div>
             <div>
