--- a/public/css/Login.css
+++ b/public/css/Login.css
@@ -71,3 +71,27 @@ a{
 #google{
     background-color: #FF2711;
 }
+input{
+    font-size: 1em;
+    width: 90%;
+    height: 2em;
+    padding-left: 1em;
+    margin-top: 1em;
+    border: #F3F3F3 solid 2px;
+}
+
+input[type=checkbox]{
+    margin-top: 3em;
+    width:2em;
+    font-size: 0.5em;
+}
+
+input[type=submit] {
+    background-color: #E00F1F;
+    width: 95%;
+    height: 3em;
+    cursor: pointer;
+    color: white;
+    border: none;
+    margin-bottom: 1em;
+}
