started index page

--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -230,3 +230,23 @@ select {
 #chat .name:after {
     content: ':'
 }
+
+/*Index.html CSS */
+.jumbotron {
+  width: 50%;
+  position: absolute;
+  top:0;
+  /*bottom: 0;*/
+  left: 0;
+  right: 0;
+
+  margin: auto;
+  margin-top: 20%;
+
+
+}
+.jumboWord{
+  text-align: center;
+}
+
+
