Correct navigation interaction with modal windows instead of changing inner content. Full bootstrap integration on all modal content and windows.

--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -154,6 +154,7 @@ button {
 }
 
 /*Inner body home Modal Handling */
+/*
 .modal {
   display: none;
   position: fixed;
@@ -170,7 +171,7 @@ button {
   border: black solid 2px;
   width: 60%;
   margin-top: 10%;
-}
+}*/
 /* The Close Button */
 .close {
   color: black;
