Bootstrapped the nav bar among other things. Not finished. Needs work still.

--- a/public/css/Login.css
+++ b/public/css/Login.css
@@ -11,6 +11,11 @@
   text-align: left;
   padding: 4%;
 }
+.row {
+  order: 1;
+  display: flex;
+  flex-direction: row;
+}
 h1 {
   display: block;
 }
