--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -2,9 +2,11 @@ html,
 body {
   margin: 0;
   padding: 0;
+  /*without height = 100% won't show background img for index.html landing page */
+  height: 100%;
 }
 body {
-  background-color: #c4c2c2;
+ background-color: #c4c2c2;
 }
 .top {
   width: 100%;
@@ -246,6 +248,54 @@ select {
 .jumboWord{
   text-align: center;
 }
+
+
+.intro{
+  height: 100%;
+  width: 100%;
+  margin: auto;
+  background: url(https://static.pexels.com/photos/163828/poker-game-play-gambling-163828.jpeg) no-repeat 50% 50%;
+  display: table;
+  top: 0;
+  background-size: cover;
+}
+
+.intro .inner{
+  display: table-cell;
+  vertical-align: middle;
+  width: 100%;
+  max-width: none;
+}
+
+.content{
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
+  /*Padding Bottom is where the "welcome Log In" show up */
+  padding-bottom: 30%;
+}
+.content h1{
+  font-size: 600%;
+  font-weight: 100;
+
+}
+.btn{
+  font-size: 135%;
+  font-weight: 400;
+  color: #4c4f56;
+  text-transform: uppercase;
+  text-decoration: none;
+  border: solid #4c4f56;
+  padding: 10px 20px;
+  border-radius: 9px;
+  background-color: white;
+
+
+}
+
+
+
+
 
 
 
