--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -6,7 +6,12 @@ body {
   height: 100%;
 }
 body {
- background-color: #c4c2c2;
+
+  background-color: #35A7FF;
+  /* I like this (oscar)
+ background-color: #2D3142; */
+  /* OLD COLOR:
+  background-color: #c4c2c2;*/
 }
 .top {
   width: 100%;
@@ -18,6 +23,7 @@ body {
   float: right;
   padding-right: 2em;
   padding-top: 0.5em;
+
 }
 .column {
   margin: 0 auto;
@@ -62,6 +68,13 @@ body {
   cursor: pointer;
   border-right: black solid 2px;
 }
+/*Creating hover effect
+ color palette by: https://coolors.co/0b3954-bfd7ea-ff6663-e0ff4f-fefffe*/
+.nav:hover {
+  background-color: #0B3954;
+  color: ghostwhite;
+}
+
 .end {
   border: none;
 }
