--- a/public/css/Login.css
+++ b/public/css/Login.css
@@ -100,3 +100,28 @@ input[type='submit'] {
   border: none;
   margin-bottom: 1em;
 }
+.createbtn {
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 2em;
+  padding: 2%;
+  margin: 1em;
+  height: 2em;
+}
+.top {
+  width: 100%;
+  text-align: center;
+  display: inline-block;
+  padding: 1em;
+}
+.column {
+  margin: 0 auto;
+  width: 100%;
+  background-color: white;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
