--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -1,191 +1,13 @@
 
 html, body {
   margin: 0;
-  padding: 0;
+  padding: 0 !important;
   max-width: 100%;
   overflow-x: hidden;
-}
-body {
   background-color: #c4c2c2;
+  max-height: 100%;
+  overflow-y: hidden;
 }
-.top {
-  width: 100%;
-  text-align: center;
-  display: inline-block;
-  padding: 1em;
-}
-.corner {
-  float: right;
-  padding-right: 2em;
-  padding-top: 0.5em;
-}
-.column {
-  margin: 0 auto;
-  width: 100%;
-  background-color: white;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-}
-
-
-.center {
-  width: 60%;
-  order: 2;
-  border: black solid 2px;
-}
-
-.row {
-  order: 1;
-  display: flex;
-  flex-direction: row;
-}
-
-.nav {
-  width: 22%;
-  height: 100%;
-  display: inline-block;
-  vertical-align: middle;
-  line-height: 2em;
-  cursor: pointer;
-  border-right: black solid 2px;
-}
-.end {
-  border: none;
-}
-nav {
-  height: 2em;
-  border-bottom: black solid 2px;
-}
-
-
-
-/* Accordian handling */
-
-.accordbtn {
-  cursor: pointer;
-}
-.accordcon{
-  display: none;
-}
-.accordbtn.active:after{
-  content: '\02795';
-  font-size: 0.7em;
-  padding-left: 1em;
-}
-
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-#change {
-  margin-top: 1em;
-  padding-bottom: 1em;
-  border-top: black solid 2px;
-}
-.leaderboard {
-  border-top: black solid 2px;
-}
-
-label {
-  color: black;
-}
-
-
-h2 {
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
-
-/*Inner Body Home */
-.createbtn {
-  background-color: green;
-  color: white;
-  cursor: pointer;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 2em;
-  padding: 2%;
-  margin: 1em;
-  height: 2em;
-}
-.small {
-  height: 1em;
-  line-height: 1em;
-}
-#table {
-  min-height: 300px;
-  border: black solid 2px;
-  margin: 1em;
-}
-table {
-  width: 100%;
-}
-
-button {
-  width: 50%;
-  height: 2em;
-  background-color: green;
-  border: none;
-  margin: 1em;
-  cursor: pointer;
-}
-
-
-.close {
-  color: black;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-  padding-right: 1em;
-  padding-top: 0.3em;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-#createHeader {
-  width: 100%;
-  border-bottom: black solid 2px;
-  text-align: center;
-}
-
-#createLobby {
-  text-align: center;
-}
-
-input {
-  width: 60%;
-  margin-top: 1em;
-}
-input[type='radio'] {
-  width: 1em;
-  margin-bottom: 1em;
-  margin-top: 1em;
-}
-select {
-  margin: 1em;
-}
-.leftForm {
-  order: 1;
-  width: 50%;
-  padding: 1em;
-  text-align: right;
-}
-.rightForm {
-  order: 2;
-  width: 50%;
-  padding: 1em;
-  text-align: left;
-}
-
 /* Chat Interface */
 
 #chat .name {
@@ -199,21 +21,17 @@ select {
   padding: 0px;
 }
 
-#scratchLogo{
-  border-bottom: black solid 2px;
-  padding-bottom: 1em;
-}
 
 
 /* New Bootstrap things */
-.navbar-nav {
+#navbarText > .navbar-nav {
   float:none;
   margin:0 auto;
   display: block;
   text-align: center;
 }
 
-.navbar-nav > li {
+#navbarText > .navbar-nav > li {
   display: inline-block;
   float:none;
 }
@@ -262,4 +80,13 @@ h2{
 .scroll{
     max-height: 400px;
     overflow-y: auto;
+}
+
+#scratchLogo{
+   border-bottom: black solid 2px;
+   padding-bottom: 1em;
+}
+
+ul{
+  list-style-type: none;
 }
