--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -21,7 +21,9 @@ html, body {
   padding: 0px;
 }
 
-
+.center{
+    text-align: center;
+}
 
 /* New Bootstrap things */
 #navbarText > .navbar-nav {
