--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -6,7 +6,7 @@ html, body {
   overflow-x: hidden;
   background-color: #c4c2c2;
   max-height: 100%;
-  overflow-y: hidden;
+  /*overflow-y: hidden;*/
 }
 /* Chat Interface */
 
@@ -80,7 +80,7 @@ h2{
 }
 
 .scroll{
-    max-height: 400px;
+    max-height: 60%;
     overflow-y: auto;
 }
 
@@ -91,6 +91,8 @@ h2{
 
 ul{
   list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 table{
