--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -56,6 +56,7 @@ h1 {
       font-size: 2.5em;
       font-family: 'Georgia';
       display: inline;
+      margin: 0;
 }
 h2{
     font-size: 1.5em;
