--- a/public/css/index.css
+++ b/public/css/index.css
@@ -58,22 +58,37 @@ h2 {
     text-align: center;
     margin: 0 auto;
 }
-
-.intro{
-    height: 100%;
+.backImg{
+    background-image: url(https://static.pexels.com/photos/163828/poker-game-play-gambling-163828.jpeg);
+/* no-repeat 50% 50%*/
+    min-height: 100%;
     width: 100%;
-    margin: auto;
-    background: url(https://static.pexels.com/photos/163828/poker-game-play-gambling-163828.jpeg) no-repeat 50% 50%;
+    max-width: none;
     display: table;
     top: 0;
     background-size: cover;
+   /* position: center;*/
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
+.intro{
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+
+}
+
 
 .intro .inner{
     display: table-cell;
     vertical-align: middle;
-    width: 100%;
-    max-width: none;
+    margin: 0 auto;
+    text-align: center;
+    display: inline-block;
+    padding-top: 5%;
+
 }
 
 .content{
