--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,6 +41,14 @@
 	transform: rotateX(180deg);
 	backface-visibility: hidden;
 }
+#last-played {
+	position: absolute;
+	width: 60px;
+	left: calc(50vw + 35px);
+	height: 86px;
+	top: calc(50vh + 10px);
+	border: 1px dotted white;
+}
 .card-flip {
 	
 	animation: flip-card-rev 1s 1;
@@ -131,3 +139,25 @@
 	bottom: 20%;
 	
 }
+
+
+#select-suit {
+	position: fixed;
+	background-color: white;
+	left: 30%;
+	width: 40%;
+	height: 40%;
+	top: 30%;
+}
+#select-swap-or-skip {
+	position: fixed;
+	background-color: white;
+	left: 30%;
+	width: 40%;
+	height: 40%;
+	top: 30%;
+}
+.disabled-card {
+	background-color: #d0d0d0 !important;
+	box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
+} 
