--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,20 +10,85 @@ body {
 
 }
 
+/*  Mobile Styles*/
+@media only screen and (max-width: 400px){
+    .content h1{
+        font-size: 100%;
+        font-weight: lighter;
+        color: #000000;
+        font-family: 'Georgia', sans-serif;
+        display: inline;
+
+    }
+    .developers li, ul{
+        vertical-align: middle;
+        display: inline-block;
+        margin: 0;
+        padding: 0;
+        font-size: medium ;
+        position: relative;
+    }
+
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+    .content h1{
+        font-size: 750%;
+        font-weight: 100;
+        color: #000000;
+        font-family: 'Georgia', sans-serif;
+        display: inline;
+
+    }
+    .gameInfo{
+        text-align: center;
+        text-decoration: none;
+        border: solid #4c4f56;
+        padding: 10px 20px;
+        border-radius: 9px;
+        background-color: white;
+        position:relative ;
+
+    }
+    h2 {
+        font-size: 150%;
+    }
+    h4{
+        font-size: 100% ;
+    }
+    .developers li{
+        vertical-align: middle;
+        display: block;
+        height: 15px;
+        margin: 0;
+        padding: 0;
+        font-size: large ;
+        position: relative;
+    }
+
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 961px) {
+    .content h1{
+        font-size: 900%;
+        font-weight: 100;
+        color: #000000;
+        font-family: 'Georgia', sans-serif;
+        display: inline;
+
+    }
+
+}
+
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
-.content h1{
-    font-size: 900%;
-    font-weight: 100;
-    color: #000000;
-    font-family: 'Georgia', sans-serif;
-    display: inline;
 
-}
 
 h2 {
     margin-top: 1em;
@@ -110,10 +175,6 @@ h2 {
 
 .gameInfo{
     text-align: center;
-    /*font-size: 135%;
-    font-weight: 400;*/
-    color: #4c4f56;
-  /*  text-transform: uppercase;*/
     text-decoration: none;
     border: solid #4c4f56;
     padding: 10px 20px;
@@ -129,9 +190,9 @@ h2 {
     margin: 0 5px;
     display: inline;
     /*margin-right: 0px;*/
-    border-right: 1px solid #aaa;
     padding: 0 20px;
     font-size: large ;
+    text-decoration: underline ;
 }
 
 .btn{
