--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -42,6 +42,9 @@ html, body {
         margin-left: auto;
         margin-right: auto;
     }
+    .modal-content{
+        margin: 0 auto;
+    }
 
 }
 
@@ -73,6 +76,10 @@ html, body {
     .col-2, .col-8{
         margin: 15px 15px;
     }
+    .form-group{
+        font-size: 1.1em;
+    }
+
 
 
 
@@ -80,6 +87,12 @@ html, body {
 
 /* Desktop Styles */
 @media only screen and (min-width: 961px) {
+    .modal-content{
+
+    }
+    .form-group{
+        font-size: 1.3em;
+    }
 
 }
 
@@ -157,6 +170,8 @@ h2{
 
 .scroll{
     overflow-y: auto;
+    height:100px;
+    border: 1px solid black;
 }
 
 #scratchLogo{
@@ -191,3 +206,8 @@ table{
     padding: 0;
 }
 
+
+.modal-header{
+    text-align: center;
+    margin: 0 auto;
+}
