--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -41,9 +41,16 @@ html, body {
     .centerItems{
         margin-left: auto;
         margin-right: auto;
+
     }
+
     .modal-content{
         margin: 0 auto;
+        text-align: center;
+    }
+    .nav-item{
+        padding-left: 15px;
+        padding-right: 15px;
     }
 
 }
@@ -72,12 +79,17 @@ html, body {
     }
     .centerItems{
         margin: 0 auto;
+        padding-bottom: 10px;
     }
     .col-2, .col-8{
         margin: 15px 15px;
     }
     .form-group{
-        font-size: 1.1em;
+        font-size: 1.3em;
+    }
+
+    .form-control{
+        font-size: 0.8em;
     }
 
 
@@ -88,10 +100,13 @@ html, body {
 /* Desktop Styles */
 @media only screen and (min-width: 961px) {
     .modal-content{
-
+        text-align: center;
     }
     .form-group{
         font-size: 1.3em;
+    }
+    .form-control{
+        font-size: 0.8em;
     }
 
 }
@@ -137,6 +152,8 @@ html, body {
    line-height: 2em;
    border-bottom: black solid 2px;
   background-color: #34589d;
+    color: ghostwhite;
+
 }
 
 h1 {
@@ -170,6 +187,9 @@ h2{
 
 .scroll{
     overflow-y: auto;
+
+}
+.lobbyChat{
     height:100px;
     border: 1px solid black;
 }
@@ -193,8 +213,9 @@ table{
     border-bottom: black solid 2px;
 }
 .fill{
-    height: 85%;
+    height: 95%;
     border-bottom: black solid 2px;
+
 }
 #main{
     height: 100%;
@@ -210,4 +231,7 @@ table{
 .modal-header{
     text-align: center;
     margin: 0 auto;
+}
+.navbar-collapse.collapse {
+    display: block!important;
 }
