--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -7,7 +7,7 @@ html, body {
   background-color: #c4c2c2;
   max-height: 100%;
   height: 100%;
-  overflow-y: hidden;
+  /*overflow-y: hidden;*/
 }
 /* Chat Interface */
 
