--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,9 +44,9 @@
 #last-played {
 	position: absolute;
 	width: 60px;
-	left: calc(50vw + 35px);
+	left: calc(50% + 35px);
 	height: 86px;
-	top: calc(50vh + 10px);
+	top: calc(50% + 10px);
 	border: 1px dotted white;
 }
 .card-flip {
