--- a/public/css/games/style.css
+++ b/public/css/games/style.css
@@ -2,6 +2,10 @@ html, body {
     width: 100%;
     height: 100%;
 }
+.choose-player-button {
+	z-index: 99999999;
+}
+
 #start-game {
 	position: fixed;
 	left: 40%;
