--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -69,7 +69,7 @@ html, body {
    text-align: center;
    line-height: 2em;
    border-bottom: black solid 2px;
-  background-color: #34589d;
+  background-color: #8399a8;
     color: ghostwhite;
 
 }
@@ -100,7 +100,7 @@ h2{
 }
 
 .navbar-light{
-  background-color: darkorange;
+  background-color: #7496B0;
 }
 
 .scroll{
