--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -151,6 +151,11 @@ table{
 .modal-header{
     text-align: center;
     margin: 0 auto;
+
+}
+.modal-content{
+    background-color: #B7D7EF;
+
 }
 .navbar-collapse.collapse {
     display: block!important;
