--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -8,7 +8,7 @@ html, body {
   background-color: #B2D6FF;
   max-height: 100%;
   height: 100%;
-  /*overflow-y: hidden;*/
+  overflow-y: hidden;
 }
 
 /* Chat Interface */
@@ -156,9 +156,22 @@ table{
     display: block!important;
 }
 
+#headingOne, #headingPlayersOne, #global-players, #lobby-players{
+    height: 95%;
+}
+
+#headingTwo, #headingPlayersTwo{
+    height: 95%;
+    display: none;
+}
+
+#global-chat, #lobby-chat{
+    height: 90%;
+}
+
 .pre-scrollable{
-    max-height: 400px;
-    min-height: 400px;
+    min-height: 100%;
+    max-height: 100%;
 }
 
 /* Mobile Styles */
@@ -167,6 +180,7 @@ table{
         margin: 0;
         padding: 0;
         text-align: center;
+        overflow-y: scroll;
     }
 
 
@@ -186,6 +200,7 @@ table{
         text-align: center;
         margin: 0 auto;
         height: auto;
+        width: 100%;
 
     }
     .centerItems{
@@ -211,7 +226,9 @@ table{
 
 /* Tablet Styles */
 @media only screen and (min-width: 401px) and (max-width: 960px) {
-
+    html, body{
+        overflow-y: scroll;
+    }
 
     .mainItems{
         display: table-header-group;
@@ -229,6 +246,7 @@ table{
         text-align: center;
         margin: 0 auto;
         height: auto;
+        width: 100%;
 
     }
     .centerItems{
