--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -177,6 +177,7 @@ table{
 .availableGames{
     background-color: #7496B0;
     font-size: large;
+    cursor: pointer;
 }
 /* Mobile Styles */
 @media only screen and (max-width: 400px) {
