--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -22,6 +22,7 @@ html, body {
 #chat{
   margin: 0px;
   padding: 0px;
+    height: 100%;
 }
 
 /* Utillities */
@@ -66,7 +67,7 @@ html, body {
 }
 
 .sideTitle {
-   height: 2em;
+   height: 5%;
    vertical-align: middle;
    text-align: center;
    line-height: 2em;
@@ -181,8 +182,8 @@ table{
 }
 
 .pre-scrollable{
-    min-height: 100%;
-    max-height: 100%;
+    min-height: 99%;
+    max-height: 99%;
 }
 .tab-content{
     margin: 10px 10px;
